--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/java,linux,macos,maven,windows,eclipse,intellij+all
+
+keys.properties
+src/test/resources/out
