--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.7</version>
+        </dependency>
+
 	</dependencies>
 </project>
